--- a/indextest.html
+++ b/indextest.html
@@ -33,6 +33,10 @@
             <h2>Доп инфо2 </h2>
             <p>sport</p>
         </section>
+        <section>
+            <h2>Доп инфо3 </h2>
+            <p>sport2</p>
+        </section>
     </main>
 </body>
     <!-- Your site is ready to be published at https://stassap16.github.io/ -->
