new direct + section4

--- a/indextest.html
+++ b/indextest.html
@@ -37,6 +37,10 @@
             <h2>Доп инфо3 </h2>
             <p>sport2</p>
         </section>
+        <section>
+            <h2>Доп инфо4 </h2>
+            <p>тест для папки и гита git-coursevm</p>
+        </section>
     </main>
 </body>
     <!-- Your site is ready to be published at https://stassap16.github.io/ -->
